--- a/.env
+++ b/.env
@@ -15,9 +15,9 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=f4ebc3379a9491dc5d0556ad2f704e9c
+APP_SECRET=9bd88bc1ab5c69a721de40c966164623
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
-#TRUSTED_HOSTS='^(localhost|example\.com)$'
+#TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
@@ -29,12 +29,5 @@ APP_SECRET=f4ebc3379a9491dc5d0556ad2f704e9c
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=mysql://root:''@127.0.0.1:3306/FINDMEPROJECT?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
-
-###> symfony/messenger ###
-# Choose one of the transports below
-# MESSENGER_TRANSPORT_DSN=doctrine://default
-# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
-# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-###< symfony/messenger ###
