--- a/.env
+++ b/.env
@@ -21,13 +21,20 @@ APP_SECRET=9bd88bc1ab5c69a721de40c966164623
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+# MAILER_DSN=smtp://smtp.gmail.com:993
+# MAIL_USERNAME=maissa.abdelwahed99@gmail.com
+# MAIL_PASSWORD=maissaABD741
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
-# For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:''@127.0.0.1:3306/FINDMEPROJECT?serverVersion=5.7
+# 
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+ DATABASE_URL=mysql://root:''@127.0.0.1:3306/FINDMEPROJECT?serverVersion=5.7
+#DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://maissa.abdelwahed99@gmail.com:maissaABD741@default
+###< symfony/google-mailer ###
