--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,23 +1,43 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+#        users_in_memory: { memory: null }
+         from_Database:
+             entity:
+                 class: App\Entity\Utilisateur
+                 property : email
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: lazy
-            provider: users_in_memory
+            switch_user: true
+#            provider: users_in_memory
+            form_login:
+                #login_path: login
+                check_path: login_app
+                #username_parameter: login_form[username]
+                #password_parameter: login_form[password]"
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                target: app_login
+            guard:
+                authenticators:
+                    - App\Security\LoginAuthentificatorAuthenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
             # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/profile, roles: ROLE_USER }
+    encoders:
+        App\Entity\Utilisateur: bcrypt
