--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 #  * .env                contains default values for the environment variables needed by the app
 #  * .env.local          uncommitted file with local overrides
 #  * .env.$APP_ENV       committed environment-specific defaults
-#  * .env.$APP_ENV.local uncommitted environment-specific overrides
+#  * .env.$APP_ENV.local uncommitted environment-specific overrides²²²²²²²²²²²²²²²²²
 #
 # Real environment variables win over .env files.
 #
