--- a/.env
+++ b/.env
@@ -36,5 +36,5 @@ APP_SECRET=9bd88bc1ab5c69a721de40c966164623
 ###< doctrine/doctrine-bundle ###
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-MAILER_DSN=gmail://maissa.abdelwahed99@gmail.com:maissaABD741@default
+MAILER_DSN=gmail://findmedsi201@gmail.com:findme123@default
 ###< symfony/google-mailer ###
