--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -3,3 +3,8 @@ twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
     exception_controller: null
+    paths:
+        # point this wherever your images live
+        '%kernel.project_dir%/public/assets/images': images
+
+
