--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
         "symfony/stopwatch": "^4.4",
         "symfony/var-dumper": "^4.4",
         "symfony/web-profiler-bundle": "^4.4",
-        "symfony/web-server-bundle": "4.4.*"
+        "symfony/web-server-bundle": "^4.4"
     },
     "config": {
         "preferred-install": {
