--- a/.env
+++ b/.env
@@ -38,3 +38,10 @@ APP_SECRET=9bd88bc1ab5c69a721de40c966164623
 # Gmail SHOULD NOT be used on production, use it in development only.
 MAILER_DSN=gmail://findmedsi201@gmail.com:findme123@default
 ###< symfony/google-mailer ###
+
+###> symfony/mercure-bundle ###
+# See https://symfony.com/doc/current/mercure.html#configuration
+MERCURE_PUBLISH_URL=http://mercure/.well-known/mercure
+# The default token is signed with the secret key: !ChangeMe!
+MERCURE_JWT_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJtZXJjdXJlIjp7InB1Ymxpc2giOltdfX0.Oo0yg7y4yMa1vr_bziltxuTCqb8JVHKxp-f_FwwOim0
+###< symfony/mercure-bundle ###
